# swigGen_cpp_python

./: .gitignore  CMakeLists.txt  log.txt
src/: CMakeLists.txt
src/test/: CMakeLists.txt  gen.bat  test.cpp  test.h  test.i  test.py  test_global.h
